tests/error/polar_too_big.gw
#! [contains] extraneous component of polar value
polar(0,0,0,0);
